# kanchi

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yaml  package-lock.json
agent/: app.py  config.py  models.py  pyproject.toml
agent/api/: concurrency_routes.py  task_routes.py  worker_routes.py
agent/services/: concurrency_service.py  task_action_service.py  task_service.py  worker_service.py
agent/services/actions/: retry_action.py
agent/tests/unit/: test_frontend_static.py  test_task_argument_recovery.py
frontend/: nuxt.config.ts  package-lock.json
frontend/app/components/: CommandPalette.vue  data-table.vue  navbar.vue
frontend/app/composables/: useBackendUrls.ts
frontend/app/pages/: login.vue
frontend/app/pages/concurrency/: index.vue
frontend/app/pages/queues/: index.vue
frontend/app/pages/tasks/: [id].vue
frontend/app/pages/workers/: index.vue
frontend/app/services/: apiClient.ts  logger.ts
frontend/app/stores/: tasks.ts  websocket.ts
k8s-manifests/: README.md  deploy.yml  ingress.yml  service.yml
scripts/: docker-run.sh
